# DeepSeek-OCR-MPS

./: .gitignore  README.md  download.py  hotfix.sh  pyproject.toml  requirements.txt  run_dpsk_ocr_mps.py  web.py
